--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="kr">
   <head>
     <meta charset="UTF-8" />
-    <title>지하철 노선도 관리</title>
+    <title>지하철 노선도 관리 & 경로 검색</title>
   </head>
   <body>
     <div id="app">
-      <h1>🚇 지하철 노선도 관리 </h1>
+      <h1>🚇 지하철 노선도 관리 & 경로 검색</h1>
     </div>
     <script type="module" src="src/index.js"></script>
   </body>
