--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
         <button id = "map-print-manager-button">4. 지하철 노선도 출력</button>
       </div>
 
-      <div id = "station-manager">
+      <div id = "station-manager" class = "show">
         <h4>역 이름</h4>
         <input id = "station-name-input" type="text" placeholder="역 이름을 입력하세요" required>
         <button id = "station-add-button">역 추가</button>
         <h2>🚉 지하철 역 목록</h2>
-        <table>
-          <tr>
-            <th>역 이름</th>
-            <th>설정</th>
-          </tr>
-          <tr>
-            <td>강남</td>
-            <td><button>삭제</button></td>
-          </tr>
-        </table>
+        <div id="station-name-table">
+          <table border="1">
+            <tr>
+              <th>역 이름</th>
+              <th>설정</th>
+            </tr>
+            <tr>
+              <td>강남</td>
+              <td><button>삭제</button></td>
+            </tr>
+          </table>
+        </div>
       </div>
 
       <div id="line-manager">
