--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
             </tr>
             <tr>
               <td>교대</td>
-              <td><button>삭제</button></td>
+              <td><button class = "station-delete-button">삭제</button></td>
             </tr>
             <tr>
               <td>강남</td>
-              <td><button>삭제</button></td>
+              <td><button class = "station-delete-button">삭제</button></td>
             </tr>
             <tr>
               <td>역삼</td>
-              <td><button>삭제</button></td>
+              <td><button class = "station-delete-button">삭제</button></td>
             </tr>
             <tr>
               <td>남부터미널</td>
-              <td><button>삭제</button></td>
+              <td><button class = "station-delete-button">삭제</button></td>
             </tr>
             <tr>
               <td>양재</td>
-              <td><button>삭제</button></td>
+              <td><button class = "station-delete-button">삭제</button></td>
             </tr>
             <tr>
               <td>매봉</td>
-              <td><button>삭제</button></td>
+              <td><button class = "station-delete-button">삭제</button></td>
             </tr>
             <tr>
               <td>양재 시민의 숲</td>
-              <td><button>삭제</button></td>
+              <td><button class = "station-delete-button">삭제</button></td>
             </tr>
           </table>
         </div>
@@ -134,7 +134,10 @@
 
 
       <div id="map-print-manager" class = "show">
+        <div class="map">
 
+
+        </div>
       </div>
     </div>
     <script type="module" src="src/index.js"></script>
