feat(revise): press delete btn in station table
- delete btn doesn't work in station table.
- solve it by event delegation.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <button id = "station-add-button">역 추가</button>
         
         <h2>🚉 지하철 역 목록</h2>
-        <div id="station-name-table">
-          <table border="1">
+        <div>
+          <table id="station-name-table" border="1">
             <tr>
               <th>역 이름</th>
               <th>설정</th>
