--- a/index.html
+++ b/index.html
@@ -40,13 +40,11 @@
         
         <div>
           상행종점 <select id="line-start-station-selector">
-            <option value="인천">인천</option>
           </select>
         </div>
 
         <div>
-          하행종점 <select id="line-end-station-selector">
-            <option value="인천">인천</option>          
+          하행종점 <select id="line-end-station-selector">     
           </select>
         </div>
 
@@ -58,8 +56,8 @@
         <button id = "line-add-button" style="margin: 10px">노선 추가</button>
 
         <h2>🚉 지하철 노선 목록</h2>
-        <div id="line-status-table">
-          <table border="1">
+        <div>
+          <table id="line-status-table" border="1">
             <tr>
               <th>노선 이름</th>
               <th>상행 종점역</th>
