feat(section): update section control btn
- whenever user delete line from line tab, line select btn updates in section tab.
- made section class
- making event listeners in section tab
- remove section select btns in html

--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
 
       <div id="section-manager" class = "show">
         <h3>구간을 수정할 노선을 선택해주세요.</h3>
-        <button class="section-line-menu-button">2호선</button>
-        <button class="section-line-menu-button">3호선</button>
-        <button class="section-line-menu-button">신분당선</button>
-
+        <div class="section-line-menu-button-control">
+        </div>
         <div class="hidden"><h3>2호선 관리</h3></div>
         <div class="hidden"><h3>3호선 관리</h3></div>
         <div class="hidden"><h3>신분당선 관리</h3></div>
