feat(mapPrint): update map print func
- show all lines and stations that is included in each line
- can print duration and distance between the stations.
- added css layouts to show prettier by list.

--- a/index.html
+++ b/index.html
@@ -72,14 +72,12 @@
       <div id="section-manager" class = "show">
         <h3>구간을 수정할 노선을 선택해주세요.</h3>
         <div class="section-line-menu-button-control">
+
         </div>
-        <div class="hidden"><h3>2호선 관리</h3></div>
-        <div class="hidden"><h3>3호선 관리</h3></div>
-        <div class="hidden"><h3>신분당선 관리</h3></div>
 
-        <h4>구간 등록</h4>
-
-
+        <div class = "section-select-screen">
+        
+        </div>
       </div>
 
 
