--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
           <div style = "margin: 10px 0px">구간거리 <input type="text" id = "new-section-distance" placeholder="구간 거리(km)를 입력하세요"> 소요시간 <input type="text" id="new-section-time" placeholder="소요시간(분)을 입력하세요"> <button id="section-add-button">등록</button>
           </div>
 
+          <div>
+            <table id="section-status-table" border="1">
+              <tr>
+                <th>순서</th>
+                <th>이름</th>
+                <th>설정</th>
+              </tr>
+            </table>
+          </div>
+
         </div>
       </div>
 
