--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <body>
     <div id="app">
       <h1>🚇 지하철 노선도 관리 & 경로 검색</h1>
+      <button type="button" id="station-manager-button">1. 역 관리</button>
+      <button type="button" id="line-manager-button">2. 노선 관리</button>
+      <button type="button" id="section-manager-button">3. 구간 관리</button>
+      <button type="button" id="map-print-manager-button">4. 지하철 노선도 출력</button>
     </div>
+    <div id="function-section"></div>
     <script type="module" src="src/index.js"></script>
   </body>
 </html>
