feat(section: update validation func.
- check inputs(upper, lower, distance, duration) values when user tries to add section.
- make a function that works bf adding section, which name is addSectionPreliminaryWork.
- change input tags in section adding HTML. text type to number type.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </select>         
           </div>
 
-          <div style = "margin: 10px 0px">구간거리 <input type="text" id = "new-section-distance" placeholder="구간 거리(km)를 입력하세요"> 소요시간 <input type="text" id="new-section-time" placeholder="소요시간(분)을 입력하세요"> <button id="section-add-button">등록</button>
+          <div style = "margin: 10px 0px">구간거리 <input type="number" id = "new-section-distance" placeholder="구간 거리(km)를 입력하세요"> 소요시간 <input type="number" id="new-section-time" placeholder="소요시간(분)을 입력하세요"> <button id="section-add-button">등록</button>
           </div>
 
           <div>
