feat: Add stationViewTemplate

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <button type="button" id="section-manager-button">3. 구간 관리</button>
       <button type="button" id="map-print-manager-button">4. 지하철 노선도 출력</button>
     </div>
-    <div id="function-section"></div>
+    <div id="content-section"></div>
     <script type="module" src="src/index.js"></script>
   </body>
 </html>
