refactor(section): Refactor things
- Make constants to visualize what it means.
- Change variable name clearly.
- Change input tag type in HTML.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
 
         <div style = "margin: 10px 0px">
-          구간거리 <input type="text" id = "line-distance" placeholder="구간 거리(km)를 입력하세요">
-          소요시간 <input type="text" id="line-time" placeholder="소요시간(분)을 입력하세요">
+          구간거리 <input type="number" id = "line-distance" placeholder="구간 거리(km)를 입력하세요">
+          소요시간 <input type="number" id="line-time" placeholder="소요시간(분)을 입력하세요">
         </div>
 
         <button id = "line-add-button" style="margin: 10px">노선 추가</button>
