--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button id = "line-manager-button">2. 노선 관리</button>
         <button id = "section-manager-button">3. 구간 관리</button>
         <button id = "map-print-manager-button">4. 지하철 노선도 출력</button>
+        <button id="find-path-manager-button">5. 경로 조회</button>
       </div>
 
 
@@ -113,6 +114,36 @@
 
         </div>
       </div>
+
+
+      <div id="find-path-manager" class = "show">  
+        <h2>🚇 지하철 길찾기</h2>
+
+        <div style = "font-weight: 600;">
+          출발역 <input type="text" id="departure-station-name-input" placeholder="출발역을 입력하세요">
+        </div>
+        <div style = "font-weight: 600;">
+          도착역 <input type="text" id="arrival-station-name-input" placeholder="도착역을 입력하세요">
+        </div>
+
+        <span>
+          <input type="radio" id = "shortest-path" name ="search-type" checked>
+          <label for="shortest-path">최단 거리</label>
+        </span>
+        
+        <span>
+          <input type="radio" id = "shortest-time" name = "search-type">
+          <label for="shortest-time">최소 시간</label>
+        </span>
+
+        <div>
+          <button id="search-button">길 찾기</button>
+        </div>
+        
+
+
+      </div>
+
     </div>
     <script type="module" src="src/index.js"></script>
   </body>
