--- a/index.html
+++ b/index.html
@@ -140,7 +140,18 @@
           <button id="search-button">길 찾기</button>
         </div>
         
-
+        <div id = "find-path-result"  class = "hidden">
+          <h2>✔ 결과</h2>
+          <h4 id="find-path-result-title"></h4>
+          <div>
+            <table id="find-path-result-table" border="1">
+              <tr>
+                <th>총 거리</th>
+                <th>총 소요시간</th>
+              </tr>
+            </table>
+          </div>
+        </div>
 
       </div>
 
