Add pathSearch func

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <button type="button" id="line-manager-button">2. 노선 관리</button>
       <button type="button" id="section-manager-button">3. 구간 관리</button>
       <button type="button" id="map-print-manager-button">4. 지하철 노선도 출력</button>
+      <button type="button" id="path-search-button">5. 경로 조회</button>
     </div>
     <div id="content-section"></div>
     <script type="module" src="src/index.js"></script>
